# bookstack-client

./: .gitignore  LICENSE  README.md  bookstack_docker-compose.yml  pyproject.toml
src/bookstack_client/: __init__.py  client.py  exceptions.py  utils.py
src/bookstack_client/models/: __init__.py  attachments.py  audit_log.py  base.py  books.py  chapters.py  images.py  pages.py  permissions.py  recycle_bin.py  responses.py  roles.py  search.py  shelves.py  user.py  users.py
src/bookstack_client/resources/: __init__.py  audit_log.py  base.py
