[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bookstack-client"
dynamic = ["version"]
description = 'Python client library for BookStack API'
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = []
authors = [
  { name = "Benjamin Schober", email = "bennischober001@gmail.com" },
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["bookstack", "api", "client", "wiki", "documentation"]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/bennischober/bookstack-client"
Documentation = "https://github.com/bennischober/bookstack-client#readme"
Source = "https://github.com/bennischober/bookstack-client"
Repository = "https://github.com/bennischober/bookstack-client"
Issues = "https://github.com/bennischober/bookstack-client/issues"
Changelog = "https://github.com/bennischober/bookstack-client/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/bookstack_client/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/bookstack_client"]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/bookstack_client tests}"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.coverage.run]
source = ["src/bookstack_client"]
omit = ["*/tests/*"]

[tool.coverage.paths]
bookstack_client = ["src/bookstack_client", "*/bookstack-client/src/bookstack_client"]
tests = ["tests", "*/bookstack-client/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
